--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -41,6 +41,10 @@
 					<label for="password">Password</label>
 					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
 				</div>
+        <div class="form-group">
+          <label for="oauthClient">Are you a Oauth client ?</label>
+          <input type="checkbox" id="oauthClient" name="oauthClient" data-ng-model="credentials.isOauthClient">
+        </div>
 				<div class="text-center form-group">
 					<button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp;
 					<a href="/#!/signin" class="show-signup">Sign in</a>
