--- a/app/views/dialog.server.view.html
+++ b/app/views/dialog.server.view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Beer Locker</title>
+    <title>MEAN OAuth2.0</title>
   </head>
   <body>
     <p>Hi {{ user.username }}!</p>
